fixing alignment of profile picture

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
 		width: 100%;
 		position: absolute;
 		bottom: 0px;
+		margin-left: 0px;
 	}
 
 	.title {
